[samsungtv] more comment updates
Signed-off-by: Nick Waterton <n.waterton@outlook.com>